<resources>
    <string name="app_name">Food Map</string>
    <string name="channel_name">ToDoList Notification Channel</string>
    <string name="channel_description">ToDoList primary notification channel for notifying of upcoming due dates</string>
    <string name="add_word">Add a ToDoItem</string>
    <string name="restaurant">Restaurant Name</string>
    <string name="price">Price</string>
    <string name="rating">Rating out of 10</string>
    <string name="order">Order…</string>
    <string name="review">Review…</string>
    <string name="Price">Price: $</string>
    <string name="Rating">Rating: </string>
    <string name="Photo">Photo: </string>
    <string name="save_to_do_item">Save To Do Item</string>
    <string name="delete_to_do_item">Delete To Do Item</string>
    <string name="food_map">Food map</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="friends_floating_action">Friends Floating Action</string>
    <string name="maps_floating_action_button">Maps Floating Action Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="open_map">Open Map</string>
    <string name="addtodo">AddToDo</string>
    <string name="user">User</string>
    <string name="title">Title</string>
    <string name="takes_a_photo">Takes a Photo</string>
</resources>