<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodMapListActivity.FoodReviewItemListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="377dp"
        android:layout_height="595dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        tools:listitem="@layout/recyclerview_item" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="97dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/friendsBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@android:drawable/ic_menu_share"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/share_with_friends" />

        <ImageButton
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/ic_menu_mapmode"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/open_map" />

        <ImageButton
            android:id="@+id/AddBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/sharp_add_black_36"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/addtodo" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>